--- a/main.html
+++ b/main.html
@@ -1,16 +1,33 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+    <title>Code Optimization</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
 
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 0 20px;
+        }
+    </style>
+</head>
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+<div class="container">
+    <p>We can optimize a solution using both time and space optimization. To optimize a program,</p>
+    <ol>
+        <li>We can reduce the time taken to run the program and increase the space occupied</li>
+        <li>We can reduce the memory usage of the program and increase its total run time</li>
+        <li>We can reduce both time and space complexity by deploying relevant algorithms</li>
+    </ol>
+</div>
 
 </body>
-
 </html>
